Remove Method und Add Method angepasst, dazugehörige Tests ergänzt.

--- a/travel_planner/pytest.ini
+++ b/travel_planner/pytest.ini
@@ -1,5 +1,8 @@
 #pytest.ini
 
 [pytest]
+
 markers =
     example: example marker for test cases
+    add: test cases for add method
+    remove: test cases for remove method
